# cpr-pivot-lab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEMAP.md  METRICS_POLICY.md  OPTIMIZATION_PLAN.md  README.md  STRATEGY.md  docker-compose.yml  pyproject.toml
.codex/skills/baseline-rerun/: SKILL.md
agent/: llm_agent.py
agent/llm/: glm_provider.py  ollama_provider.py
agent/tools/: backtest_tools.py
config/: settings.py
config/baselines/: cpr_current.yaml
db/: backtest_db.py  duckdb.py  duckdb_backtest_results.py  duckdb_data_quality.py  duckdb_indicator_builders.py  duckdb_lock.py  duckdb_runtime_builders.py  duckdb_table_ops.py  duckdb_validation.py  init_pg.sql  paper_db.py  postgres.py  replica.py  replica_consumer.py
docs/: ANALYST_TRANSFORMATION_PLAN.md  CODEMAP.md  DATABASE_ARCHITECTURE.md  DB_OPTIMIZATION_PLAN.md  DESIGN.md  ENGINE_OPTIMIZATION_PLAN.md  ISSUES.md  KITE_INGESTION.md  LIVE_EXECUTION_SAFETY_PLAN.md  LIVE_READINESS_RESILIENCY_HARDENING_PLAN.md  LIVE_TRADING_ARCHITECTURE_PLAN.md  LIVE_TRADING_PARITY_REWORK_PLAN.md  METRICS_POLICY.md  MULTI_MACHINE_SETUP.md  NICEGUI_DESIGN_SYSTEM.md  OPTIMIZATION_PLAN.md  PAPER_TRADING_RUNBOOK.md  PARAMETER_UNIFORMITY.md  PARITY_INCIDENT_LOG.md  PROGRESSIVE_TRAIL_RATCHET_PLAN.md  README.md  REAL_ORDER_LIVE_FLOW.md  RUNTIME_REBUILD.md  SETUP.md  backtest-medallion-workflow.md  performance-tuning.md  strategy-guide.md  trailing-stop-explained.md
docs/adr/: 001-baseline-strategy-policy.md  001-pivot-level-strategy.md  002-cpr-full-framework.md
engine/: alert_dispatcher.py  bar_orchestrator.py  baselines_cli.py  broker_adapter.py  broker_reconciliation.py  cli_setup.py  command_lock.py  constants.py  convert_to_parquet.py  cost_model.py  cpr_atr_models.py  cpr_atr_result.py  cpr_atr_shared.py  cpr_atr_strategy.py  cpr_atr_utils.py  cpr_backtest_helpers.py  cpr_trade_simulator.py  day_pack_sources.py  execution_defaults.py  execution_safety.py  kite_ingestion.py  kite_ticker_adapter.py  kite_token.py  live_market_data.py  local_ticker_adapter.py  paper_admin.py  paper_alerts.py  paper_params.py  paper_reconciliation.py  paper_risk.py  paper_runtime.py  paper_session_driver.py  paper_setup_loader.py  paper_store.py  paper_summary.py  paper_trailing.py  progress.py  real_order_runtime.py  run_backtest.py  signal_generation.py  (+7 more)
engine/notifiers/: __init__.py  email.py  telegram.py
scripts/: baseline_registry.py  build_tables.py  clean_artifacts.py  copy_from_nse.py  copy_to_nse.py  dashboard_smoke.py  data_hygiene.py  data_quality.py  data_validate.py  eod_status.py  gold_pipeline.py  init_postgres.py  issue_draft.py  kite_get_token.py  kite_ingest.py  kite_token.py  live_market_data.py  lock_status.py  migrate_split.py  paper_archive.py  paper_broker_cli.py  paper_cli_helpers.py  paper_coverage.py  paper_feed_audit.py  paper_handler_map.py  paper_live.py  paper_live_helpers.py  paper_prepare.py  paper_replay.py  paper_strategy_params.py  paper_supervisor.py  paper_trading.py  paper_trading_parser.py  paper_validate.py  parity_check.py  prune_runs.py  refresh.py  reset_run_history.py  resume_session.py  run_campaign.py  (+4 more)
sweeps/: cpr_8_baselines.yaml  cpr_width_rvol.yaml
tests/: bad.yaml  conftest.py  test_alert_dispatcher.py  test_backtest_replica_migration.py  test_backtest_tools.py  test_bar_orchestrator.py  test_baselines_cli.py  test_broker_adapter.py  test_broker_reconciliation.py  test_build_tables_resume.py  test_cli.py  test_command_lock.py  test_components.py  test_constants.py  test_cpr_atr_shared.py  test_cpr_utils.py  test_data_hygiene.py  test_data_quality_cli.py  test_duckdb_daily_overlay.py  test_duckdb_locking.py  test_duckdb_table_ops.py  test_execution_safety.py  test_home_page.py  test_intraday_day_pack_incremental.py  test_kite_ingestion.py  test_kite_ticker.py  test_kite_token.py  test_live_market_data.py  test_llm_agent.py  test_local_ticker.py  test_ops_automation.py  test_ops_pages.py  test_pack_resume.py  test_paper_admin_commands.py  test_paper_archive.py  test_paper_db.py  test_paper_feed_audit.py  test_paper_live_polling.py  test_paper_prepare.py  test_paper_reconciliation.py  (+24 more)
web/: main.py  run_nicedash.py  state.py
web/components/: __init__.py
web/pages/: broker_orders.py  compare.py  data_quality.py  home.py  ops_pages.py  run_detail.py  strategy_analysis.py  strategy_guide.py  symbols.py  trades.py  walk_forward.py
